--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,9 @@
         <div class="col-md-6 col-lg-4">
             <div class="card shadow">
                 <div class="card-body p-5">
-                    <h2 class="text-center mb-4">GaiaTrack</h2>
+                    <div class="text-center mb-4">
+                        <img src="/assets/img/GaiaLogo.png" alt="GaiaTrack Logo" style="max-width: 150px; height: auto;">
+                    </div>
                     {% if messages %}
                         {% for message in messages %}
                             <div class="alert alert-{{ message.tags }}">
